# Fargonaut

./: .buildinfo  .gitignore  .pre-commit-config.yaml  CONTRIBUTING.md  README.md  api_ref.html  fargonaut.fields.html  fargonaut.html  genindex.html  index.html  objects.inv  py-modindex.html  pyproject.toml  requirements-dev.txt  requirements.txt  search.html  searchindex.js  user_docs.html
.doctrees/: api_ref.doctree  environment.pickle  fargonaut.doctree  fargonaut.fields.doctree  index.doctree  user_docs.doctree
.doctrees/user_docs/: basic_usage.doctree  contrib_guide.doctree  installation.doctree
.github/workflows/: ci.yml  docs.yml
_sources/: api_ref.rst.txt  fargonaut.fields.rst.txt  index.rst.txt
_sources/user_docs/: basic_usage.rst.txt  contrib_guide.rst.txt  installation.rst.txt
docs/source/: conf.py  fargonaut.rst  user_docs.rst
docs/source/user_docs/: basic_usage.rst  installation.rst
fargonaut/: field.py  output.py
fargonaut/fields/: density.py  energy.py  magnetic_field.py  velocity.py
tests/: test_field.py  test_output.py
tests/fields/: __init__.py  test_density.py  test_energy.py  test_magnetic_field.py  test_velocity.py
user_docs/: basic_usage.html  contrib_guide.html  installation.html
