[project]
name = "Fargonaut"
version = "0.1"
requires-python = ">=3.12"
dependencies = [
    "matplotlib",
    "numpy",
]

[project.optional-dependencies]
dev = [
    "pip-tools",
    "pre-commit",
    "ruff",
    "sphinx",
    "sphinx-rtd-theme"
]

[tool.ruff]
target-version = "py312"
lint.select = [
    "D",   # pydocstyle
    "E",   # pycodestyle
    "F",   # Pyflakes
    "I",   # isort
    "UP",  # pyupgrade
    "RUF", # ruff
]
lint.pydocstyle.convention = "google"
